--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -94,6 +94,7 @@
                 </form>
             </div>
         </div>
+        <script src="../js/subscribeForm.js"></script>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2481.288577779988!2d-0.07841242381560404!3d51.54460720798509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761c921bd4f76b%3A0xf0764585f21c59aa!2sWine%20Cellar!5e0!3m2!1sru!2sru!4v1695589445446!5m2!1sru!2sru" width=100% height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <script src="../js/animationShow.js"></script>
         <div class="contact-info">
