update sebsribe email

--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -130,13 +130,13 @@
                 <h2>Подпишись</h2>
                 <h1>Хотите быть в курсе? Подпишитесь на рассылку, чтобы получать все новости и еженедельные обновления.</h1>
             </div>
-            <div class="subscribe-input">
+            <form class="subscribe-email">
                 <input type="email" id="email" placeholder="email">
                 <button id="subscribe-button" type="button">
                     <img src="../img/send.png" alt="Отправить">
                 </button>
                 <span class="error-message">Неверный формат email</span>
-            </div>
+            </form>
         </div>
     </main>
     <footer>
