update submit all

--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -130,9 +130,9 @@
                 <h2>Подпишись</h2>
                 <h1>Хотите быть в курсе? Подпишитесь на рассылку, чтобы получать все новости и еженедельные обновления.</h1>
             </div>
-            <form class="subscribe-email">
+            <form class="subscribe-email" id="subscribe-form-email">
                 <input type="email" id="email" placeholder="email">
-                <button id="subscribe-button" type="button">
+                <button id="subscribe-button" type="submit">
                     <img src="../img/send.png" alt="Отправить">
                 </button>
                 <span class="error-message">Неверный формат email</span>
