--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="../css/outlines.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Trattatello&display=swap">
     <link rel="stylesheet" type="text/css" href="../css/aboutUs.css">
+    <link rel="icon" href="./img/icon.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/icon.jpeg" type="image/x-icon">
 </head>
 <body>
     <header>
