--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="./css/outlines.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Trattatello&display=swap">
+    <link rel="icon" href="./img/icon.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/icon.jpeg" type="image/x-icon">
 </head>
 <body>
     <header>
