--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" type="text/css" href="../css/outlines.css">
     <link rel="stylesheet" type="text/css" href="../css/contacts.css">
     <link rel="stylesheet" type="text/css" href="../css/aboutUs.css">
-    <link rel="icon" href="./img/icon.jpeg" type="image/x-icon">
-    <link rel="shortcut icon" href="./img/icon.jpeg" type="image/x-icon">
+    <link rel="icon" href="../img/icon.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/icon.jpeg" type="image/x-icon">
 </head>
 <body>
     <header>
