--- a/src/html/favorite.html
+++ b/src/html/favorite.html
@@ -8,8 +8,8 @@
     <title>Favorite</title>
     <link rel="stylesheet" type="text/css" href="../css/outlines.css">
     <link rel="stylesheet" type="text/css" href="../css/favorite.css">
-    <link rel="icon" href="./img/icon.jpeg" type="image/x-icon">
-    <link rel="shortcut icon" href="./img/icon.jpeg" type="image/x-icon">
+    <link rel="icon" href="../img/icon.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/icon.jpeg" type="image/x-icon">
 </head>
 <body>
     <header>
