--- a/src/html/store.html
+++ b/src/html/store.html
@@ -8,8 +8,8 @@
     <title>Store</title>
     <link rel="stylesheet" type="text/css" href="../css/outlines.css">
     <link rel="stylesheet" type="text/css" href="../css/store.css">
-    <link rel="icon" href="./img/icon.jpeg" type="image/x-icon">
-    <link rel="shortcut icon" href="./img/icon.jpeg" type="image/x-icon">
+    <link rel="icon" href="../img/icon.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/icon.jpeg" type="image/x-icon">
 </head>
 <body>
     <header>
