add a generating code for basket

--- a/src/html/store.html
+++ b/src/html/store.html
@@ -114,6 +114,7 @@
                 </div>
             </div>
             </aside>
+            <script src="../js/generateItemForBasket.js"></script>
             <div class="product-list">
                 <div class="item-1">
                     <img src="../img/wine_for_sale.jpg" alt="Товар 1">
@@ -121,7 +122,7 @@
                         <h2>Vina Albali Rose</h2>
                         <p>Цена: $99.99</p>
                     </div>
-                    <button>Подробнее</button>
+                    <button>Добавить в корзину</button>
                 </div>
                 <div class="item-1">
                     <img src="../img/wine_for_sale_2.jpg" alt="Товар 2">
@@ -129,7 +130,7 @@
                         <h2>Sauvignon Blanc</h2>
                         <p>Цена: $149.99</p>
                     </div>
-                    <button>Подробнее</button>
+                    <button>Добавить в корзину</button>
                 </div>
             </div>
         </div>
