--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="алкоголь, интернет магазин, элитный алкоголь">
-    <meta name="description" content="Интернет-магазин элитного алкоголя. Широкий ассортимент алкогольных напитков высокого качества.">
+    <meta name="description" content="Интернет-магазин элитного алкоголя. Широкий ассортимент алкогольных напитков высокого качества. и немного сыра к нему">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
     <link rel="stylesheet" type="text/css" href="../css/outlines.css">
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../css/aboutUs.css">
     <link rel="icon" href="../img/icon.jpeg" type="image/x-icon">
     <link rel="shortcut icon" href="../img/icon.jpeg" type="image/x-icon">
+    <script src="../js/generateItemForBasket.js"></script>
 </head>
 <body>
     <header>
@@ -60,14 +61,9 @@
                <span class="close-button-basket" id="close-basket-modal">&times;</span>
                 <h2>Корзина</h2>
                     <ul id="basket-items">
-                        <li>
-                            <img src="../img/vinishko1.jpeg">
-                            <span>Трамонто Испания 1988</span>
-                        </li>
-                        <li>
-                            <img src="../img/vinishko2.jpeg">
-                            <span>Кубанское Белое 2001</span>
-                        </li>
+                        <div class="empty-basket">
+                            <p>Здесь пока ничего нет</p>
+                        </div>
                     </ul>
             </div>
         </div>
