--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="алкоголь, интернет магазин, элитный алкоголь">
-    <meta name="description" content="Интернет-магазин элитного алкоголя. Широкий ассортимент алкогольных напитков высокого качества.">
+    <meta name="description" content="Интернет-магазин элитного алкоголя. Широкий ассортимент алкогольных напитков высокого качества. и немного сыра к нему">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="./css/outlines.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Trattatello&display=swap">
     <link rel="icon" href="./img/icon.jpeg" type="image/x-icon">
     <link rel="shortcut icon" href="./img/icon.jpeg" type="image/x-icon">
+    <script src="./js/generateItemForBasket.js"></script>
+    <script src="./js/goToOtherPage.js"></script>
 </head>
 <body>
     <header>
@@ -59,14 +61,9 @@
                <span class="close-button-basket" id="close-basket-modal">&times;</span>
                 <h2>Корзина</h2>
                     <ul id="basket-items">
-                        <li>
-                            <img src="./img/vinishko1.jpeg">
-                            <span>Трамонто Испания 1988</span>
-                        </li>
-                        <li>
-                            <img src="./img/vinishko2.jpeg">
-                            <span>Кубанское Белое 2001</span>
-                        </li>
+                        <div class="empty-basket">
+                            <p>Здесь пока ничего нет</p>
+                        </div>
                     </ul>
             </div>
         </div>
@@ -142,17 +139,15 @@
                 <img src="./img/wine_item_1.jpg" alt="Товар 1">
                 <div class="item-info">
                     <h2>Вкусное вино</h2>
-                    <p>Цена: $99.99</p>
                 </div>
-                <button>Подробнее</button>
+                <button class="details-button-1">Подробнее</button>
             </div>
             <div class="item">
                 <img src="./img/wine_item_2.jpg" alt="Товар 2">
                 <div class="item-info">
                     <h2>Ароматный сыр</h2>
-                    <p>Цена: $149.99</p>
                 </div>
-                <button>Подробнее</button>
+                <button class="details-button-2">Подробнее</button>
             </div>
         </div>
         <blockquote class="quote">
