add adaptive view for mobile

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
             <img src="./img/widget_photo.jpg" alt="Картинка" class="widget-image">
             <div class="widget--content">
                 <h1 class="widget-title">Лучший винный магазин в городе</h1>
-                <p class="widget-text">Наш дружелюбный и опытный персонал поможет вам найти идеальное вино для любого случая. Независимо от того, являетесь ли вы опытным ценителем или только начинаете с первой бутылки, у нас есть что-то для каждого! Приходите изучить наш огромный выбор вин со всего мира и найдите то, что идеально подходит уже сегодня.</p>
+                <p class="widget-text">Наш дружелюбный и опытный персонал поможет вам найти идеальное вино для любого случая. Независимо от того, являетесь ли вы опытным ценителем или только начинаете, у нас есть что-то для каждого! Приходите изучить наш огромный выбор вин со всего мира и найдите то, что идеально подходит вам.</p>
             </div>
         </div>
         <div class="widget-content-2">
