add tag section

--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -76,10 +76,10 @@
             <p><sup>Прилагаемый труд</sup>×<sub>Страсть</sub> + <strong>Талант</strong> - <del>Сомнение</del> = <sup>Успех</sup></p>
         </div>
         <div class="about-us-container-1">
-            <div class="about-us-text">
+            <section class="about-us-text">
                 <h1>О нас</h1>
                 <p>Откройте для себя мир изысканных вин и попробуйте вкусы самых известных виноделен в нашем эксклюзивном винном магазине! Благодаря обширному выбору красных, белых, розовых и других сортов вина, мы гарантируем, что вы найдете что-то, что придется по вкусу вашим вкусовым рецепторам.</p>
-            </div>
+            </section>
             <div class="about-us-images">
                 <div class="image-pair">
                     <img src="../img/vino3.jpg" alt="Изображение 1">
