add loader for requests

--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -131,6 +131,7 @@
             <form class="subscribe-email" id="subscribe-form-email">
                 <input type="email" id="email" placeholder="email">
                 <button id="subscribe-button" type="submit">
+                    <span class="loader"></span>
                     <img src="../img/send.png" alt="Отправить">
                 </button>
                 <span class="error-message">Неверный формат email</span>
