--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -90,6 +90,7 @@
                     <textarea id="notes" name="notes" rows="4" placeholder="Введите ваши заметки"></textarea>
 
                     <button type="submit">Отправить</button>
+                    <div class="loader-form" id="loader-form"></div>
                 </form>
             </div>
         </div>
@@ -134,6 +135,7 @@
             <form class="subscribe-email" id="subscribe-form-email">
                 <input type="email" id="email" placeholder="email">
                 <button id="subscribe-button" type="submit">
+                    <span class="loader"></span>
                     <img src="../img/send.png" alt="Отправить">
                 </button>
                 <span class="error-message">Неверный формат email</span>
